--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Linking jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <!--Linking javascript file-->
-    <script src=".assets/javascript/app.js"></script>
+    <script src="./javascript/app.js"></script>
     
     <title>Document</title>
 </head>
