--- a/index.html
+++ b/index.html
@@ -6,20 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--Linking Bootstrap-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--Linking CSS-->
-    <link rel="stylesheet" type="text/css" href=".assets/css/stle.css">  
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <!--Linking CSS Reset-->
     <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
     <!--Linking jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <!--Linking javascript file-->
-    <script src="./javascript/app.js"></script>
-    
-    <title>Document</title>
+    <script src="./assets/javascript/app.js"></script>
+
+    <title>Baseball Trivia</title>
 </head>
 
 <body>
+    <div class="container">
+        <button type="button" id="start" class="btn btn success">START</button>
+        <p id="timer">TIMER</p>
+
+
+
+    </div>
+    
 
 </body>
 
