--- a/index.html
+++ b/index.html
@@ -22,32 +22,29 @@
 
 <body>
     <div class="container">
-        <button type="button" id="start" class="btn btn success">START</button>
-
-        <div class="row">
-            <div class="col-md-8">
-                <div id="questions">
-                    <h1 id="title">History of Baseball Trivia!</h1>
-                    <br>
-                    <h2 id="timer">Time Remaining: </h2>
-                    <br>
-                    <p>You will be given a random number at the start of the game.</p>
-                    <br>
-                    <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points
-                        to
-                        your total score.</p>
-                    <br>
-                    <p>You win the game by matching your score to the random number; you lose the game if your total
-                        score
-                        goes above the random number.</p>
-                    <br>
-                    <p>The value of each crystal is hidden from you until you click on it.</p>
-                    <br>
-                    <p>Each time when the game starts, the game will change the value of each crystal.</p>
-                </div>
-            </div>
+        <div id="intro">
+            <h1 id="title">History of Baseball Trivia!</h1>
+            <br>
+            <p id="instructions"></p>You have 30 seconds to answer the below questions about America's Pasttime.</p>
+            <br>
+            <button class="startBtn" id="start" class="btn btn success">START</button>
+            <br>
+            <h2 id="timer">Time Remaining:</h2>
         </div>
-
+        <br>
+        <p>You will be given a random number at the start of the game.</p>
+        <br>
+        <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points
+            to
+            your total score.</p>
+        <br>
+        <p>You win the game by matching your score to the random number; you lose the game if your total
+            score
+            goes above the random number.</p>
+        <br>
+        <p>The value of each crystal is hidden from you until you click on it.</p>
+        <br>
+        <p>Each time when the game starts, the game will change the value of each crystal.</p>
 
     </div>
 
