adding trivia questions

--- a/index.html
+++ b/index.html
@@ -32,20 +32,32 @@
             <h2 id="timer">Time Remaining:</h2>
         </div>
         <br>
-        <p>You will be given a random number at the start of the game.</p>
-        <br>
-        <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points
-            to
-            your total score.</p>
-        <br>
-        <p>You win the game by matching your score to the random number; you lose the game if your total
-            score
-            goes above the random number.</p>
-        <br>
-        <p>The value of each crystal is hidden from you until you click on it.</p>
-        <br>
-        <p>Each time when the game starts, the game will change the value of each crystal.</p>
+        <div class="trivaQuestions">
+            <div id="trivaGame">
+                <div class="question">#1: Who holds the Major League Baseball record for most career hits?</div>
+                <br>
+                <div class="answers">
+                    <label>
+                        <input type="radio" name="question1" value="a"> Ted Williams
+                        <input type="radio" name="question2" value="b"> Mickey Mantle
+                        <input type="radio" name="question3" value="c"> Jackie Robinson
+                        <input type="radio" name="question4" value="d"> Derek Jeter
+                    </label>
+                </div>
+                <br>
+                <div class="question">#2: Who holds the Major League Baseball record for most home runs?</div>
+                <br>
+                <div class="answers">
+                    <label>
+                        <input type="radio" name="question1" value="a"> Ted Williams
+                        <input type="radio" name="question2" value="b"> Mickey Mantle
+                        <input type="radio" name="question3" value="c"> Jackie Robinson
+                        <input type="radio" name="question4" value="d"> Derek Jeter
+                    </label>
+                </div>
 
+            </div>
+        </div>
     </div>
 
 
