adding triva questions

--- a/index.html
+++ b/index.html
@@ -55,6 +55,39 @@
                         <input type="radio" name="question4" value="d"> Derek Jeter
                     </label>
                 </div>
+                <br>
+                <div class="question">#2: Who holds the Major League Baseball record for most home runs?</div>
+                <br>
+                <div class="answers">
+                    <label>
+                        <input type="radio" name="question1" value="a"> Ted Williams
+                        <input type="radio" name="question2" value="b"> Mickey Mantle
+                        <input type="radio" name="question3" value="c"> Jackie Robinson
+                        <input type="radio" name="question4" value="d"> Derek Jeter
+                    </label>
+                </div>
+                <br>
+                <div class="question">#2: Who holds the Major League Baseball record for most home runs?</div>
+                <br>
+                <div class="answers">
+                    <label>
+                        <input type="radio" name="question1" value="a"> Ted Williams
+                        <input type="radio" name="question2" value="b"> Mickey Mantle
+                        <input type="radio" name="question3" value="c"> Jackie Robinson
+                        <input type="radio" name="question4" value="d"> Derek Jeter
+                    </label>
+                </div>
+                <br>
+                <div class="question">#2: Who holds the Major League Baseball record for most home runs?</div>
+                <br>
+                <div class="answers">
+                    <label>
+                        <input type="radio" name="question1" value="a"> Ted Williams
+                        <input type="radio" name="question2" value="b"> Mickey Mantle
+                        <input type="radio" name="question3" value="c"> Jackie Robinson
+                        <input type="radio" name="question4" value="d"> Derek Jeter
+                    </label>
+                </div>
 
             </div>
         </div>
