--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <br>
             <button class="startBtn" id="start" class="btn btn success">START</button>
             <br>
-            <h2 id="timer">Time Remaining:</h2>
+            <p id="timer">Time Remaining:</p>
         </div>
         <br>
         <div class="trivaQuestions">
@@ -45,25 +45,25 @@
                     </label>
                 </div>
                 <br>
-                <div class="question">#2: Who holds the Major League Baseball record for most home runs?</div>
+                <div class="question">#2: How many World Series Championsips have the New York Yankess won?</div>
                 <br>
                 <div class="answers">
                     <label>
-                        <input type="radio" name="question1" value="a"> Ted Williams
-                        <input type="radio" name="question2" value="b"> Mickey Mantle
-                        <input type="radio" name="question3" value="c"> Jackie Robinson
-                        <input type="radio" name="question4" value="d"> Derek Jeter
+                        <input type="radio" name="question1" value="a"> 35
+                        <input type="radio" name="question2" value="b"> 27
+                        <input type="radio" name="question3" value="c"> 12
+                        <input type="radio" name="question4" value="d"> 22
                     </label>
                 </div>
                 <br>
-                <div class="question">#2: Who holds the Major League Baseball record for most home runs?</div>
+                <div class="question">#3: In which city is the Baseball Hall of Fame located?</div>
                 <br>
                 <div class="answers">
                     <label>
-                        <input type="radio" name="question1" value="a"> Ted Williams
-                        <input type="radio" name="question2" value="b"> Mickey Mantle
-                        <input type="radio" name="question3" value="c"> Jackie Robinson
-                        <input type="radio" name="question4" value="d"> Derek Jeter
+                        <input type="radio" name="question1" value="a"> Williamsport, PA
+                        <input type="radio" name="question2" value="b"> Jacksonville, FL
+                        <input type="radio" name="question3" value="c"> St Louis, MO
+                        <input type="radio" name="question4" value="d"> Cooperstown, NY
                     </label>
                 </div>
                 <br>
