--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <label>
                         <input type="radio" name="question1" value="a"> Ted Williams
                         <input type="radio" name="question2" value="b"> Mickey Mantle
-                        <input type="radio" name="question3" value="c"> Jackie Robinson
+                        <input type="radio" name="question3" value="c"> Pete Rose
                         <input type="radio" name="question4" value="d"> Derek Jeter
                     </label>
                 </div>
