--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 <br>
                 <div class="answers">
                     <label>
-                        <input type="radio" name="question1" value="a"> Ted Williams
-                        <input type="radio" name="question2" value="b"> Mickey Mantle
-                        <input type="radio" name="question3" value="c"> Pete Rose
-                        <input type="radio" name="question4" value="d"> Derek Jeter
+                        <input type="radio" name="answer1" value="a"> Ted Williams
+                        <input type="radio" name="answer2" value="b"> Mickey Mantle
+                        <input type="radio" name="answer3" value="c"> Pete Rose
+                        <input type="radio" name="answer4" value="d"> Derek Jeter
                     </label>
                 </div>
                 <br>
@@ -49,10 +49,10 @@
                 <br>
                 <div class="answers">
                     <label>
-                        <input type="radio" name="question1" value="a"> 35
-                        <input type="radio" name="question2" value="b"> 27
-                        <input type="radio" name="question3" value="c"> 12
-                        <input type="radio" name="question4" value="d"> 22
+                        <input type="radio" name="answer1" value="a"> 35
+                        <input type="radio" name="answer2" value="b"> 27
+                        <input type="radio" name="answer3" value="c"> 12
+                        <input type="radio" name="answer4" value="d"> 22
                     </label>
                 </div>
                 <br>
@@ -60,32 +60,32 @@
                 <br>
                 <div class="answers">
                     <label>
-                        <input type="radio" name="question1" value="a"> Williamsport, PA
-                        <input type="radio" name="question2" value="b"> Jacksonville, FL
-                        <input type="radio" name="question3" value="c"> St Louis, MO
-                        <input type="radio" name="question4" value="d"> Cooperstown, NY
+                        <input type="radio" name="answer1" value="a"> Williamsport, PA
+                        <input type="radio" name="answer2" value="b"> Jacksonville, FL
+                        <input type="radio" name="answer3" value="c"> St Louis, MO
+                        <input type="radio" name="answer4" value="d"> Cooperstown, NY
                     </label>
                 </div>
                 <br>
-                <div class="question">#2: Who holds the Major League Baseball record for most home runs?</div>
+                <div class="question">#4: Which pitcher holds the record for most career Strikeouts?</div>
                 <br>
                 <div class="answers">
                     <label>
-                        <input type="radio" name="question1" value="a"> Ted Williams
-                        <input type="radio" name="question2" value="b"> Mickey Mantle
-                        <input type="radio" name="question3" value="c"> Jackie Robinson
-                        <input type="radio" name="question4" value="d"> Derek Jeter
+                        <input type="radio" name="answer1" value="a"> Nolan Ryan
+                        <input type="radio" name="answer2" value="b"> Whitey Ford
+                        <input type="radio" name="answer3" value="c"> Cy Young
+                        <input type="radio" name="answer4" value="d"> Tom Seaver
                     </label>
                 </div>
                 <br>
-                <div class="question">#2: Who holds the Major League Baseball record for most home runs?</div>
+                <div class="question">#5: </div>
                 <br>
                 <div class="answers">
                     <label>
-                        <input type="radio" name="question1" value="a"> Ted Williams
-                        <input type="radio" name="question2" value="b"> Mickey Mantle
-                        <input type="radio" name="question3" value="c"> Jackie Robinson
-                        <input type="radio" name="question4" value="d"> Derek Jeter
+                        <input type="radio" name="answer1" value="a"> Ted Williams
+                        <input type="radio" name="answer2" value="b"> Mickey Mantle
+                        <input type="radio" name="answer3" value="c"> Jackie Robinson
+                        <input type="radio" name="answer4" value="d"> Derek Jeter
                     </label>
                 </div>
 
