--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
                     </label>
                 </div>
                 <br>
-                <div class="question">#5: </div>
+                <div class="question">#5:Who was the first Major Leaguer to have his number retired?</div>
                 <br>
                 <div class="answers">
                     <label>
-                        <input type="radio" name="answer1" value="a"> Ted Williams
-                        <input type="radio" name="answer2" value="b"> Mickey Mantle
+                        <input type="radio" name="answer1" value="a"> Lou Gehrig
+                        <input type="radio" name="answer2" value="b"> Babe Ruth
                         <input type="radio" name="answer3" value="c"> Jackie Robinson
-                        <input type="radio" name="answer4" value="d"> Derek Jeter
+                        <input type="radio" name="answer4" value="d"> Ty Cobb
                     </label>
                 </div>
 
