--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <!--Linking CSS Reset-->
     <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
-    <!--Linking jQuery-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <!--Linking javascript file-->
-    <script src="./assets/javascript/app.js"></script>
+
 
     <title>Baseball Trivia</title>
 </head>
@@ -33,8 +30,8 @@
         </div>
         <br>
         <div class="trivaQuestions">
-            <div id="trivaGame">
-                <div class="question">#1: Who holds the Major League Baseball record for most career hits?</div>
+            <div id="triviaGame">
+                <!-- <div class="question">#1: Who holds the Major League Baseball record for most career hits?</div>
                 <br>
                 <div class="answers">
                     <label>
@@ -45,7 +42,7 @@
                     </label>
                 </div>
                 <br>
-                <div class="question">#2: How many World Series Championsips have the New York Yankess won?</div>
+                <div class="question"></div>
                 <br>
                 <div class="answers">
                     <label>
@@ -87,13 +84,16 @@
                         <input type="radio" name="answer3" value="c"> Jackie Robinson
                         <input type="radio" name="answer4" value="d"> Ty Cobb
                     </label>
-                </div>
+                </div> -->
 
             </div>
         </div>
     </div>
 
-
+    <!--Linking jQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <!--Linking javascript file-->
+    <script src="./assets/javascript/app.js"></script>
 </body>
 
 </html>
