--- a/index.html
+++ b/index.html
@@ -31,62 +31,13 @@
         <br>
         <div class="trivaQuestions">
             <div id="triviaGame">
-                <!-- <div class="question">#1: Who holds the Major League Baseball record for most career hits?</div>
-                <br>
-                <div class="answers">
-                    <label>
-                        <input type="radio" name="answer1" value="a"> Ted Williams
-                        <input type="radio" name="answer2" value="b"> Mickey Mantle
-                        <input type="radio" name="answer3" value="c"> Pete Rose
-                        <input type="radio" name="answer4" value="d"> Derek Jeter
-                    </label>
-                </div>
-                <br>
-                <div class="question"></div>
-                <br>
-                <div class="answers">
-                    <label>
-                        <input type="radio" name="answer1" value="a"> 35
-                        <input type="radio" name="answer2" value="b"> 27
-                        <input type="radio" name="answer3" value="c"> 12
-                        <input type="radio" name="answer4" value="d"> 22
-                    </label>
-                </div>
-                <br>
-                <div class="question">#3: In which city is the Baseball Hall of Fame located?</div>
-                <br>
-                <div class="answers">
-                    <label>
-                        <input type="radio" name="answer1" value="a"> Williamsport, PA
-                        <input type="radio" name="answer2" value="b"> Jacksonville, FL
-                        <input type="radio" name="answer3" value="c"> St Louis, MO
-                        <input type="radio" name="answer4" value="d"> Cooperstown, NY
-                    </label>
-                </div>
-                <br>
-                <div class="question">#4: Which pitcher holds the record for most career Strikeouts?</div>
-                <br>
-                <div class="answers">
-                    <label>
-                        <input type="radio" name="answer1" value="a"> Nolan Ryan
-                        <input type="radio" name="answer2" value="b"> Whitey Ford
-                        <input type="radio" name="answer3" value="c"> Cy Young
-                        <input type="radio" name="answer4" value="d"> Tom Seaver
-                    </label>
-                </div>
-                <br>
-                <div class="question">#5:Who was the first Major Leaguer to have his number retired?</div>
-                <br>
-                <div class="answers">
-                    <label>
-                        <input type="radio" name="answer1" value="a"> Lou Gehrig
-                        <input type="radio" name="answer2" value="b"> Babe Ruth
-                        <input type="radio" name="answer3" value="c"> Jackie Robinson
-                        <input type="radio" name="answer4" value="d"> Ty Cobb
-                    </label>
-                </div> -->
-
             </div>
+        </div>
+        <br>
+        <div class="scoreBoard">
+            <p>Answers Correct:</p>
+            <br>
+            <p>Answers Inorrect:</p>
         </div>
     </div>
 
